# apps/backend/swagger.json
@@ -269,7 +269,7 @@
           "Filecoin purchases"
         ]
       },
-      "put": {
+      "patch": {
         "operationId": "PurchasesController_update",
         "parameters": [
           {
@@ -903,7 +903,49 @@
       },
       "CreatePurchaseDto": {
         "type": "object",
-        "properties": {}
+        "properties": {
+          "id": {
+            "type": "string",
+            "example": "04a7155d-ced1-4981-8660-48670a0735dd"
+          },
+          "certificateId": {
+            "type": "string",
+            "example": "973d48bb-15da-4eaf-8040-b6cb66e22023"
+          },
+          "buyerId": {
+            "type": "string",
+            "example": "29e25d61-103a-4710-b03d-ee12df765066"
+          },
+          "sellerId": {
+            "type": "string",
+            "example": "68926364-a0ba-4160-b3ea-1ee70c2690dd"
+          },
+          "recsSold": {
+            "type": "number",
+            "example": 3
+          },
+          "recsTransactions": {
+            "type": "object",
+            "example": [
+              {
+                "year": 2020,
+                "amount": 2
+              },
+              {
+                "year": 2021,
+                "amount": 1
+              }
+            ]
+          }
+        },
+        "required": [
+          "id",
+          "certificateId",
+          "buyerId",
+          "sellerId",
+          "recsSold",
+          "recsTransactions"
+        ]
       },
       "SellerDto": {
         "type": "object",
@@ -1102,7 +1144,41 @@
       },
       "UpdatePurchaseDto": {
         "type": "object",
-        "properties": {}
+        "properties": {
+          "id": {
+            "type": "string",
+            "example": "04a7155d-ced1-4981-8660-48670a0735dd"
+          },
+          "certificateId": {
+            "type": "string",
+            "example": "973d48bb-15da-4eaf-8040-b6cb66e22023"
+          },
+          "buyerId": {
+            "type": "string",
+            "example": "29e25d61-103a-4710-b03d-ee12df765066"
+          },
+          "sellerId": {
+            "type": "string",
+            "example": "68926364-a0ba-4160-b3ea-1ee70c2690dd"
+          },
+          "recsSold": {
+            "type": "number",
+            "example": 3
+          },
+          "recsTransactions": {
+            "type": "object",
+            "example": [
+              {
+                "year": 2020,
+                "amount": 2
+              },
+              {
+                "year": 2021,
+                "amount": 1
+              }
+            ]
+          }
+        }
       },
       "CreateBuyerDto": {
         "type": "object",
